# ensemble-mendel-data-analysis-tool

./: .dockerignore  .env.example  .gitignore  AGENT_RUN_REPORT.md  Dockerfile  README.md  SETUP.md  pyproject.toml  requirements.txt
app/: streamlit_app.py
data/: sales.csv
scripts/: fetch_dataset.py
src/data_agent/: __init__.py  agent.py  cli.py  config.py  evaluate.py  prompts.py  tracing.py
src/data_agent/llm/: __init__.py  anthropic_client.py  base.py  factory.py
src/data_agent/tools/: __init__.py  code_executor.py  dataset.py  registry.py
src/pc_agent/: __init__.py  agent.py  cli.py  compatibility.py  config.py  evaluate.py  models.py  prompts.py  tracing.py
src/pc_agent/catalog/: __init__.py  catalog.py  normalize.py
src/pc_agent/llm/: __init__.py  anthropic_client.py  base.py  factory.py
src/pc_agent/tools/: __init__.py  registry.py
tests/: scenarios.json  test_offline.py
