[project]
name = "data-analysis-agent"
version = "0.1.0"
description = "An agentic AI data-analysis assistant: CSV in -> clarify -> generate & run pandas code -> self-correct -> insights."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic[bedrock]>=0.69",
    "pandas>=2.2",
    "numpy>=1.26,<2.3.0",
    "python-dotenv>=1.0",
    "pydantic>=2.7",
    "tabulate>=0.9",
]

[project.optional-dependencies]
ui = [
    "streamlit>=1.36,<1.50",
    "pillow>=10.4,<11",
    "pyarrow>=14,<17",
]

[dependency-groups]
dev = ["pytest>=8.0"]

[project.scripts]
data-agent = "data_agent.cli:main"
data-agent-eval = "data_agent.evaluate:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/data_agent"]

[tool.hatch.metadata]
allow-direct-references = true
